--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
@@ -40,6 +43,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
-    "vite": "^5.4.1"
+    "vite": "^5.4.9"
   }
 }
